--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -23,6 +23,25 @@
     <script src="{% static 'app/js/all.min.js' %}"></script>
     <script src="{% static 'app/js/mycript.js' %}"></script>
     <script src="{% static 'app/js/owl.carousel.min.js' %}"></script>
+    <script type = "text/javascript">
+      var user = '{{request.user}}'
+      function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+    const csrftoken = getCookie('csrftoken');
+    </script>
     <!-- html -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <title>Web pass đồ cũ cho sinh viên</title>
@@ -69,10 +88,10 @@
         <i class="bi bi-cart"></i> Giỏ hàng
       </a>
 
-      <!-- Phần chat -->
+      <!-- Phần chat
       <a class="nav-link ms-3" href="#">
         <i class="bi bi-chat-dots"></i> Chat
-      </a>
+      </a> -->
 
       <!-- User -->
       <div class="d-flex align-items-center ms-3">
@@ -83,6 +102,7 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="#">Hồ sơ của tôi</a></li>
+            <li><a class="dropdown-item" href="{% url 'history' %}">Lịch sử giao dịch</a></li>
             <li><a class="dropdown-item" href="#">Cài đặt</a></li>
           </ul>
         </div>
@@ -104,5 +124,7 @@
   {% block main-content %} {% endblock main-content %}
   {% block cart_content %} {% endblock cart_content %}
   {% block upload %} {% endblock upload %}
-    </body>
+  {% block history %} {% endblock history %}
+  {% block watch %} {% endblock watch %}
+    </body><script src="{% static 'app/js/cart.js' %}"></script>
 </html>
