--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -77,112 +77,24 @@
 </style>
 
 <div class="container">
-    <div class="row justify-content-between">
-        <div class="col-4">
+    <div class="row">
+        {%for product in products%}
+        <div class="col-4" style="width=100%">
             <div class="card mb-4">
-                <img src="{% static 'app/images/butchim.png' %}" class="card-img-top" alt="Bút chì">
+                <img src="{{product.ImageURL}}" class="card-img-top" alt="Bút chì">
                 <div class="card-body">
-                    <h5 class="card-title">Bút chì</h5>
-                    <p class="card-text">Bút chì mới, chất lượng tốt, thích hợp cho học sinh và sinh viên.</p>
+                    <h5 class="card-title">{{product.name}}</h5>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="d-flex align-items-center">
-                            <a href="#" class="btn btn-primary me-3">Thêm vào giỏ hàng</a>
-                            <a href="#" class="btn btn-secondary">Xem</a>
-                            <span class="text-success fw-bold ms-2">5.000 VNĐ</span>
+                            <a data-product = {{product.id}} data-action = "add" href="#" class="btn btn-primary me-3 update-cart">Thêm vào giỏ hàng</a>
+                            <a class="btn btn-secondary" href="{% url 'watch' %}?id={{product.id}}">Xem</a>
+                            <span class="text-success fw-bold ms-2">{{product.price |floatformat:0}}VNĐ</span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="col-4">
-            <div class="card mb-4">
-                <img src="{% static 'app/images/maytinh.png' %}" class="card-img-top" alt="máy tính">
-                <div class="card-body">
-                    <h5 class="card-title">Máy Tính</h5>
-                    <p class="card-text">Máy tính mới, chất lượng tốt, thích hợp cho học sinh và sinh viên.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="d-flex align-items-center">
-                            <a href="#" class="btn btn-primary me-3">Thêm vào giỏ hàng</a>
-                            <a href="#" class="btn btn-secondary">Xem</a>
-                            <span class="text-success fw-bold ms-2">250.000 VNĐ</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-4">
-            <div class="card mb-4">
-                <img src="{% static 'app/images/bongchuyen.png' %}" class="card-img-top" alt="Bóng chuyền">
-                <div class="card-body">
-                    <h5 class="card-title">Bóng chuyền</h5>
-                    <p class="card-text">Bóng chuyền mới, chất lượng tốt, thích hợp cho học sinh và sinh viên.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="d-flex align-items-center">
-                            <a href="#" class="btn btn-primary me-3">Thêm vào giỏ hàng</a>
-                            <a href="#" class="btn btn-secondary">Xem</a>
-                            <span class="text-success fw-bold ms-2">300.000 VNĐ</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row justify-content-between">
-        <div class="col-4">
-            <div class="card mb-4">
-                <img src="{% static 'app/images/butchim.png' %}" class="card-img-top" alt="Bút chì">
-                <div class="card-body">
-                    <h5 class="card-title">Bút chì</h5>
-                    <p class="card-text">Bút chì mới, chất lượng tốt, thích hợp cho học sinh và sinh viên.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="d-flex align-items-center">
-                            <a href="#" class="btn btn-primary me-3">Thêm vào giỏ hàng</a>
-                            <a href="#" class="btn btn-secondary">Xem</a>
-                            <span class="text-success fw-bold ms-2">5.000 VNĐ</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-4">
-            <div class="card mb-4">
-                <img src="{% static 'app/images/maytinh.png' %}" class="card-img-top" alt="máy tính">
-                <div class="card-body">
-                    <h5 class="card-title">Máy Tính</h5>
-                    <p class="card-text">Máy tính mới, chất lượng tốt, thích hợp cho học sinh và sinh viên.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="d-flex align-items-center">
-                            <a href="#" class="btn btn-primary me-3">Thêm vào giỏ hàng</a>
-                            <a href="#" class="btn btn-secondary">Xem</a>
-                            <span class="text-success fw-bold ms-2">250.000 VNĐ</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-4">
-            <div class="card mb-4">
-                <img src="{% static 'app/images/bongchuyen.png' %}" class="card-img-top" alt="Bóng chuyền">
-                <div class="card-body">
-                    <h5 class="card-title">Bóng chuyền</h5>
-                    <p class="card-text">Bóng chuyền mới, chất lượng tốt, thích hợp cho học sinh và sinh viên.</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="d-flex align-items-center">
-                            <a href="#" class="btn btn-primary me-3">Thêm vào giỏ hàng</a>
-                            <a href="#" class="btn btn-secondary">Xem</a>
-                            <span class="text-success fw-bold ms-2">300.000 VNĐ</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% endfor %}
     </div>
 </div>
 
